<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广西外国语学院教务登录</string>
    <string name="action_settings">Settings</string>
    <string name="name">广外教务登录</string>
    <string name="usename_">学   号</string>
    <string name="password_">密   码</string>
    <string name="authcode">验证码</string>
    
    <string name="sname">输入学号</string>
	<string name="spass">输入密码</string>
	<string name="scode">输入验证码</string>
</resources>
